--- a/loteca.html
+++ b/loteca.html
@@ -40,6 +40,14 @@
       margin-right: 5px;
       line-height: 30px;
     }
+    @media screen and (max-width: 768px) {
+      .jogo{
+    
+        box-sizing: content-box;
+ 
+      
+      }
+    }
    
 </style>
 
