--- a/dupla.html
+++ b/dupla.html
@@ -43,6 +43,15 @@ header{
       line-height: 30px;
     }
 
+    @media screen and (max-width: 768px) {
+    .jogo {
+    width: 25%;
+    padding: 10px;
+    box-sizing: border-box;
+    text-align: center;
+  }
+
+}
 </style>
 
 
