--- a/sete.html
+++ b/sete.html
@@ -30,6 +30,14 @@
       font-weight: bold;
     }
 
+
+    @media screen and (max-width: 768px) {
+
+#supersete-resultado{
+    white-space: nowrap;
+}
+    }
+    
     /*
     .numero {
       display: inline-block;
