--- a/lotomania.html
+++ b/lotomania.html
@@ -5,6 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Loto Mania</title>
+
+ <!--codigo que exube resultados-->
+    <link rel="shortcut icon" href="https://em-content.zobj.net/thumbs/160/facebook/65/money-bag_1f4b0.png">
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet"
+      integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
+      <link rel="stylesheet" href="assets/css/resultados.css">
+
+ <!--Fim codigo que exube resultados-->
+
+
     <script src="js/lotomania.js"></script>
 
     <link rel="stylesheet" href="estilo/style.css">
@@ -89,6 +100,46 @@
   
     </div>
   </main>
+
+
+  <div class="centralizar">
+
+  <div class="pai">
+    <div class="tamanho-cards">
+      <div class="card text-center" style="background-color: transparent;">
+        <div class="card-header text-white" style="background-color: var(--lotomania);">
+          Lotomania Resultado
+        </div>
+        <div class="card-body text-start">
+          <div class="">
+            <div class="dados d-flex justify-content-center align-items-center m-2">
+              <span class="bg-primary text-white p-1 raio">Concurso: <span id="concurso-lotomania"></span> </span><br>
+              <span class="bg-primary text-white p-1 raio">Data: <span id="data-lotomania"></span> </span><br>
+            </div><br>
+
+            
+            <div class="dezenas display justify-content-between" id="dezenas-lotomania">
+            </div>
+
+          <br>
+            <div id="resultado-lotomania"></div>
+            <div class="d-flex align-items-center justify-content-center informacoes"><br>
+              <span class="bg-primary text-white p-1 raio">Próximo concurso: <span
+                  id="proximoconcurso-lotomania"></span></span>
+            </div>
+          </div>
+        </div>
+
+        <div class="card-footer text-muted">
+        </div>
+      </div>
+      <br>
+    </div>
+  </div>
+
+  </div>
+<script type="text/javascript" src="assets/js/lotomania.js"></script>
+
 
 </body>
 </html>
