--- a/sete.html
+++ b/sete.html
@@ -5,6 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Super Sete</title>
+
+    
+   <!--codigo que exube resultados-->
+    <link rel="shortcut icon" href="https://em-content.zobj.net/thumbs/160/facebook/65/money-bag_1f4b0.png">
+      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet"
+      integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
+      <link rel="stylesheet" href="assets/css/resultados.css">
+ <!--Fim codigo que exube resultados-->
+
+
+
     <script src="js/sete.js"></script>
 
     <link rel="stylesheet" href="estilo/style.css">
