--- a/time.html
+++ b/time.html
@@ -5,6 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Time Mania</title>
+
+    <link rel="shortcut icon" href="https://em-content.zobj.net/thumbs/160/facebook/65/money-bag_1f4b0.png">
+    <link rel="stylesheet" href="assets/css/resultados.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet"
+      integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
+      <link rel="stylesheet" href="assets/css/resultados.css">
+
+
+
     <script src="js/time.js"></script>
 
     <link rel="stylesheet" href="estilo/style.css">
@@ -94,7 +103,42 @@
     </div>
   </main>
 
+       <div class="centralizar">
+  
+  <div class="pai">
+    <div class="tamanho-cards">
+      <div class="card text-center" style="background-color: transparent;">
+        <div class="card-header" style="background-color: var(--timemania); color:'black';">
+          Timemania
+        </div>
+        <div class="card-body text-start">
+          <div class="">
+            <div class="dados d-flex justify-content-center align-items-center m-2">
+              <span class="bg-primary text-white p-1 raio">Concurso: <span id="concurso-timemania"></span> </span><br>
+              <span class="bg-primary text-white p-1 raio">Data: <span id="data-timemania"></span> </span><br>
+            </div>
+            <br>
+            <div class="dezenas display justify-content-between" id="dezenas-timemania">
+            </div><br>
+            <div id="resultado-timemania"></div>
+            <div class="d-flex align-items-center justify-content-center informacoes">
+              <span class="bg-primary text-white p-1 raio">Próximo concurso: <span
+                  id="proximoconcurso-timemania"></span></span>
+            </div>
+          </div>
+        </div>
 
+        <div class="card-footer text-muted">
+        </div>
+      </div>
+      <br>
+    </div>
+  </div>
+
+
+<script type="text/javascript" src="assets/js/timemania.js"></script>
+
+</div>
 
 </body>
 </html>
